[gd_scene load_steps=56 format=3 uid="uid://bd8hnf38x5qp6"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_py2js"]
[ext_resource type="Texture2D" uid="uid://mde8wbx6gtlw" path="res://Images/terb-shadow.png" id="2_1i6o0"]
[ext_resource type="Shader" path="res://Shaders/whitecolor.gdshader" id="3_kb55j"]
[ext_resource type="PackedScene" uid="uid://cbp2nr157dqbi" path="res://Overlap/hitbox.tscn" id="4_53t58"]
[ext_resource type="Texture2D" uid="uid://c8yvaw2ccxt3j" path="res://Images/terb-FULL-20x25.png" id="4_pxf10"]
[ext_resource type="AnimationLibrary" uid="uid://c51e0eb3545dp" path="res://Animations/player_animations.res" id="5_aa0tm"]
[ext_resource type="Script" path="res://Player/SwordHitbox.gd" id="5_uh2di"]
[ext_resource type="PackedScene" uid="uid://cp2owch1u80fw" path="res://Overlap/hurtbox.tscn" id="6_tlwiw"]
[ext_resource type="AudioStream" uid="uid://bx0q5hv1qurlb" path="res://Music and Sounds/step2.wav" id="11_e0sr3"]
[ext_resource type="Script" path="res://Player/FootstepSound.gd" id="12_cdcbo"]

[sub_resource type="Gradient" id="Gradient_3ggjc"]
colors = PackedColorArray(1, 1, 1, 0.282353, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_al68s"]
gradient = SubResource("Gradient_3ggjc")
fill = 1
fill_from = Vector2(0.529915, 0.478632)
fill_to = Vector2(0.974359, 0.512821)

[sub_resource type="Gradient" id="Gradient_1ac5w"]
offsets = PackedFloat32Array(0.581395, 1)
colors = PackedColorArray(1, 1, 1, 0.741176, 1, 1, 1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g2217"]
shader = ExtResource("3_kb55j")
shader_parameter/active = false

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qtdko"]
radius = 3.0
height = 13.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uk6ns"]
animation = &"attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ln52t"]
animation = &"attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cn2tf"]
animation = &"attack_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3wuq2"]
animation = &"attack_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_3u4m4"]
blend_point_0/node = SubResource("AnimationNodeAnimation_uk6ns")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_ln52t")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_cn2tf")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_3wuq2")
blend_point_3/pos = Vector2(0, 1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_52b40"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ikfpv"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1kiuq"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cmnuu"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k6gdu"]
animation = &"idle_down_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_adlk0"]
animation = &"idle_up_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8udc5"]
animation = &"idle_up_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wkuic"]
animation = &"idle_down_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_08pvb"]
blend_point_0/node = SubResource("AnimationNodeAnimation_52b40")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_ikfpv")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_1kiuq")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_cmnuu")
blend_point_3/pos = Vector2(0, 1)
blend_point_4/node = SubResource("AnimationNodeAnimation_k6gdu")
blend_point_4/pos = Vector2(-0.5, 0.7)
blend_point_5/node = SubResource("AnimationNodeAnimation_adlk0")
blend_point_5/pos = Vector2(-0.5, -0.7)
blend_point_6/node = SubResource("AnimationNodeAnimation_8udc5")
blend_point_6/pos = Vector2(0.5, -0.7)
blend_point_7/node = SubResource("AnimationNodeAnimation_wkuic")
blend_point_7/pos = Vector2(0.5, 0.7)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lv1h7"]
animation = &"roll_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n63k6"]
animation = &"roll_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4arw0"]
animation = &"roll_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yolbv"]
animation = &"roll_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_bxbda"]
blend_point_0/node = SubResource("AnimationNodeAnimation_lv1h7")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_n63k6")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_4arw0")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_yolbv")
blend_point_3/pos = Vector2(0, 1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eyqtl"]
animation = &"run_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ora0j"]
animation = &"run_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vwwl0"]
animation = &"run_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3ehgu"]
animation = &"run_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v5bx7"]
animation = &"run_down_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lhjay"]
animation = &"run_up_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yby3d"]
animation = &"run_up_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v3mqp"]
animation = &"run_down_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_mp2sl"]
blend_point_0/node = SubResource("AnimationNodeAnimation_eyqtl")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_ora0j")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_vwwl0")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_3ehgu")
blend_point_3/pos = Vector2(0, 1)
blend_point_4/node = SubResource("AnimationNodeAnimation_v5bx7")
blend_point_4/pos = Vector2(-0.6, 0.6)
blend_point_5/node = SubResource("AnimationNodeAnimation_lhjay")
blend_point_5/pos = Vector2(-0.6, -0.6)
blend_point_6/node = SubResource("AnimationNodeAnimation_yby3d")
blend_point_6/pos = Vector2(0.6, -0.6)
blend_point_7/node = SubResource("AnimationNodeAnimation_v3mqp")
blend_point_7/pos = Vector2(0.6, 0.6)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s3n2w"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dld0f"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hug2i"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pucae"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6o1u2"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_3u4m4")
states/Attack/position = Vector2(361, 174)
states/End/position = Vector2(640, 100)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_08pvb")
states/Idle/position = Vector2(506, 57)
states/Roll/node = SubResource("AnimationNodeBlendSpace2D_bxbda")
states/Roll/position = Vector2(379, 16)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_mp2sl")
states/Run/position = Vector2(506, 143)
states/Start/position = Vector2(378, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_s3n2w"), "Start", "Run", SubResource("AnimationNodeStateMachineTransition_dld0f"), "Start", "Attack", SubResource("AnimationNodeStateMachineTransition_hug2i"), "Start", "Roll", SubResource("AnimationNodeStateMachineTransition_pucae")]
graph_offset = Vector2(-156, -51)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gowjq"]
radius = 7.0
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_56fth"]
radius = 5.0
height = 12.0

[sub_resource type="Animation" id="Animation_wku17"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_qfrls"]
resource_name = "Start"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_651uu"]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yayjt"]
_data = {
"RESET": SubResource("Animation_wku17"),
"Start": SubResource("Animation_qfrls"),
"Stop": SubResource("Animation_651uu")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_of1wa"]
radius = 7.0
height = 20.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
collision_layer = 2
platform_floor_layers = 4294967292
safe_margin = 1.0
script = ExtResource("1_py2js")
MAX_SPEED = 60

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
scale = Vector2(2, 2)
shadow_enabled = true
shadow_filter = 1
texture = SubResource("GradientTexture2D_al68s")

[node name="Terb-shadow" type="Sprite2D" parent="."]
position = Vector2(-2.08165e-12, 4)
texture = ExtResource("2_1i6o0")

[node name="MovementParticles" type="CPUParticles2D" parent="."]
y_sort_enabled = true
position = Vector2(-2.08165e-12, 3)
emitting = false
amount = 4
lifetime = 0.4
emission_shape = 3
emission_rect_extents = Vector2(4, 1)
particle_flag_align_y = true
direction = Vector2(2.08165e-12, -1)
spread = 20.0
gravity = Vector2(2.08165e-12, 100)
initial_velocity_min = 10.0
initial_velocity_max = 25.0
color_ramp = SubResource("Gradient_1ac5w")

[node name="Reflection2" type="Sprite2D" parent="."]
visible = false
show_behind_parent = true
material = SubResource("ShaderMaterial_g2217")
position = Vector2(0, 15)
texture = ExtResource("4_pxf10")
flip_v = true
hframes = 94
frame = 64

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_g2217")
position = Vector2(0, -5.5)
texture = ExtResource("4_pxf10")
hframes = 94
frame = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.08165e-12, 2)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_qtdko")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": ExtResource("5_aa0tm")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_6o1u2")
anim_player = NodePath("../AnimationPlayer")
parameters/Attack/blend_position = Vector2(2.08165e-12, 1)
parameters/Idle/blend_position = Vector2(2.08165e-12, 1)
parameters/Roll/blend_position = Vector2(2.08165e-12, 1)
parameters/Run/blend_position = Vector2(2.08165e-12, 1)

[node name="HitboxPivot" type="Marker2D" parent="."]
position = Vector2(-2.08165e-12, -4)

[node name="SwordHitbox" parent="HitboxPivot" instance=ExtResource("4_53t58")]
position = Vector2(9, 2.08165e-12)
collision_layer = 8
script = ExtResource("5_uh2di")

[node name="CollisionShape2D" parent="HitboxPivot/SwordHitbox" index="0"]
position = Vector2(0, -2.08165e-12)
shape = SubResource("CapsuleShape2D_gowjq")
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource("6_tlwiw")]
collision_mask = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(-2.08165e-12, -3)
shape = SubResource("CapsuleShape2D_56fth")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_e0sr3")
volume_db = -12.905

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yayjt")
}

[node name="FootstepSound" type="AudioStreamPlayer" parent="."]
volume_db = -23.791
script = ExtResource("12_cdcbo")

[node name="Direction" type="Marker2D" parent="."]
rotation = 1.5708

[node name="ActionableFinder" type="Area2D" parent="Direction"]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/ActionableFinder"]
position = Vector2(-2.08165e-12, 5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_of1wa")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_hurtbox_invincibility_started"]

[editable path="HitboxPivot/SwordHitbox"]
[editable path="Hurtbox"]
